--- a/barcelona.html
+++ b/barcelona.html
@@ -44,6 +44,19 @@
 	  </div><!-- /.container-fluid -->
 	</nav>
 
+<div class="container">
+	<div class="row">
+		<div class="col-sm-12">
+			<h1>Barcelona Restaurants</h1>
+		</div>
+	</div>
+
+
+
+
+
+</div>	
+
 
 
 </body>
