--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <div class="container">
 		<div class="row">
 			<div class="col-sm-3 text-center">
-				<img src="images/juliaheadshot.jpg" class="img-circle img-responsive">
+				<img src="images/profilefoto.jpg" class="img-circle img-responsive">
 			</div>
 			<div class="col-sm-9 subheading">
 				<p>Civil Engineering student at Heriot Watt University</p>
