--- a/index.html
+++ b/index.html
@@ -50,11 +50,22 @@
 				<img src="images/profilefoto.jpg" class="img-circle img-responsive">
 			</div>
 			<div class="col-sm-9 subheading">
-				<p>Civil Engineering student at Heriot Watt University</p>
-				<p>HerCapital Associate</p>
+				<h1>Civil Engineering student at Heriot Watt University</h1>
+				<h1>HerCapital Associate</h1>
 			</div>
 		</div
+
 		
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</div>
+		</div>
+	</div>
+		</div>
 	</div>
 </div>
 </body>
